--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@ Nous invitons tous ceux qui partagent cette passion pour une éducation respectu
 Explorez nos articles, découvrez de nouvelles approches éducatives et plongez dans le monde apaisant et enrichissant d'ÉducaZen !
 
 ---</p>
+             <img src="family.jpg" alt="Image de famille" class="family-image">
         </section>
 
         <section id="contact">
