--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ Explorez nos articles, découvrez de nouvelles approches éducatives et plongez 
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>Votre contenu pour la section Contact...</p>
+            <p> contact@parental.com</p>
         </section>
     </main>
 
