--- a/index.html
+++ b/index.html
@@ -50,7 +50,14 @@ Explorez nos articles, découvrez de nouvelles approches éducatives et plongez 
             <p> contact@parental.com</p>
         </section>
     </main>
-
+ <aside>
+        <h2>Liens utiles</h2>
+        <ul>
+            <li><a href="https://www.pass-santejeunes-bourgogne-franche-comte.org/tout-savoir-sur-la-parentalite-positive/">Tout savoir sur la parentalité positive</a></li>
+            <li><a href="https://www.mykidishappy.com/education-positive/parentalite-positive/">Parentalité positive sur MyKidIsHappy</a></li>
+            <li><a href="https://naitreetgrandir.com/fr/dossier/parentalite-positive-expliquee/">Dossier sur la parentalité positive - Naitre et Grandir</a></li>
+        </ul>
+    </aside>
     <footer>
         <p>&copy; 2023 Blog Parentalité & Éducation</p>
     </footer>
