--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
             </ul>
         </nav>
     </header>
-
-    <aside>
+     <aside>
         <h2>Liens utiles</h2>
         <ul>
             <li><a href="https://www.pass-santejeunes-bourgogne-franche-comte.org/tout-savoir-sur-la-parentalite-positive/">Tout savoir sur la parentalité positive</a></li>
@@ -24,28 +23,42 @@
             <li><a href="https://naitreetgrandir.com/fr/dossier/parentalite-positive-expliquee/">Dossier sur la parentalité positive - Naitre et Grandir</a></li>
         </ul>
     </aside>
-
     <main>
-
+       
         <section id="about">
             <h2>À propos</h2>
             <p>
-                Bienvenue!
 
-                Nous sommes Aya et Omar, les créateurs de cet espace dédié à l'éducation bienveillante et à l'épanouissement familial. Ici, nous explorons les voies de la communication positive, de l'éducation respectueuse et des méthodes favorisant le développement harmonieux des enfants.
-            </p>
-        </section>
 
-        <section id="family">
-            <img src="family.jpg" alt="Image de famille" class="family-image">
+
+Bienvenue!
+
+Nous sommes Aya et Omar, les créateurs de cet espace dédié à l'éducation bienveillante et à l'épanouissement familial. Ici, nous explorons les voies de la communication positive, de l'éducation respectueuse et des méthodes favorisant le développement harmonieux des enfants.
+
+À propos de Nous :
+
+Passionnés par l'éducation et l'harmonie familiale, nous avons consacré notre temps à comprendre les besoins des enfants, leur épanouissement et la construction de liens solides au sein des familles. Ce blog est un partage de nos expériences, apprentissages et réflexions sur ces sujets qui nous tiennent à cœur.
+
+Ce que Vous Trouverez Ici :
+
+Sur ÉducaZen, nous abordons un éventail de sujets allant de la communication bienveillante avec les enfants à des approches éducatives respectueuses. Vous découvrirez des articles, des astuces et des ressources pour accompagner les familles dans le développement positif de leurs enfants.
+
+Rejoignez la Communauté :
+
+Nous invitons tous ceux qui partagent cette passion pour une éducation respectueuse et une parentalité bienveillante à se joindre à nous. Partagez vos histoires, vos questions et contribuez à construire une communauté bienveillante et soutenante.
+
+Explorez nos articles, découvrez de nouvelles approches éducatives et plongez dans le monde apaisant et enrichissant d'ÉducaZen !
+
+---</p>
+             <img src="family.jpg" alt="Image de famille" class="family-image">
         </section>
 
         <section id="contact">
             <h2>Contact</h2>
-            <p>contact@parental.com</p>
+            <p> contact@parental.com</p>
         </section>
     </main>
-
+ 
     <footer>
         <p>&copy; 2023 Blog Parentalité & Éducation</p>
     </footer>
