--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Parentalité & Éducation - Accueil</title>
+    <meta name="description" content="Bienvenue sur ÉducaZen ! Un espace dédié à l'éducation bienveillante, l'épanouissement familial et des conseils pour les parents concernant le développement positif de leurs enfants. Découvrez des articles, des astuces et des ressources pour accompagner les familles dans une parentalité bienveillante.">
+
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
 <body>
