--- a/articles.html
+++ b/articles.html
@@ -21,19 +21,19 @@
             <h2>L’évolution cognitive de l’enfant</h2>
             <p>L’évolution cognitive des enfants est une fascinante série de découvertes, marquée par des étapes distinctes. Chaque phase représente une avancée remarquable dans le développement mental et émotionnel de l’enfant. Comprendre ces étapes clés peut aider les parents à mieux accompagner leurs enfants à mesure qu’ils grandissent.
 
-1. Les Fondations de l’Enfance : La Période Sensori-Motrice
+<h3>1. Les Fondations de l’Enfance : La Période Sensori-Motrice</h3>
 
 Les premières années de la vie sont caractérisées par l’exploration sensorielle et motrice. Les nourrissons découvrent le monde à travers leurs sens et leurs mouvements. Ils apprennent à coordonner leurs gestes et à comprendre la relation entre leurs actions et les réactions de leur environnement. Les jeux simples et les interactions avec les parents et les autres enfants sont essentiels à cette étape.
 
-2. Le Développement de la Pensée Symbolique : La Période Préopératoire
+<h3>2. Le Développement de la Pensée Symbolique : La Période Préopératoire</h3>
 
 Autour de l’âge de deux ans, les enfants entrent dans la phase préopératoire. Ils commencent à utiliser des symboles, comme le langage, pour représenter des objets et des idées. L’imagination se développe, permettant aux enfants de jouer à des jeux de rôle, de créer des scénarios imaginaires et de développer des compétences langagières.
 
-3. La Période Opératoire Concrète : Logique et Raisonnement
+<h3>3. La Période Opératoire Concrète : Logique et Raisonnement</h3>
 
 À partir de l’âge de sept ans environ, les enfants entrent dans la période opératoire concrète. Ils commencent à raisonner logiquement sur des concepts concrets. Leur capacité à comprendre les mathématiques, la causalité et d’autres concepts abstraits se renforce. Les jeux de construction, les énigmes et les activités de résolution de problèmes sont bénéfiques à ce stade.
 
-4. L’Éveil de la Pensée Formelle : Abstraction et Pensée Critique
+<h3>4. L’Éveil de la Pensée Formelle : Abstraction et Pensée Critique</h3>
 
 L’adolescence voit l’émergence de la pensée formelle. Les enfants développent une capacité à raisonner abstraitement, à envisager des concepts hypothétiques et à exercer la pensée critique. Les discussions ouvertes, les débats et les activités qui stimulent la réflexion sont particulièrement utiles pour favoriser cette évolution.
 
@@ -41,29 +41,7 @@ Conclusion
 
 Le développement cognitif des enfants est une aventure progressive. Chaque étape est fondamentale pour la suivante, et les expériences durant ces phases influencent grandement la façon dont les enfants interagissent avec le monde qui les entoure. En comprenant ces étapes clés, les parents peuvent créer un environnement propice à l’épanouissement mental et émotionnel de leurs enfants, les aidant ainsi à développer tout leur potentiel.</p>
         </article>
-        <article>
-<h2>Art de la Communication Bienveillante : Créer des Liens Solides avec Vos Enfants</h2>
-<p>La communication est la clé d’une relation forte et harmonieuse entre parents et enfants. Cultiver une approche bienveillante de la communication peut non seulement renforcer les liens, mais aussi aider les enfants à développer des compétences sociales et émotionnelles saines.
-
-1. Écoute Active : La Clé d’une Communication Authentique
-L’écoute active est le fondement d’une communication efficace. Prendre le temps d’écouter attentivement les préoccupations, les joies et les questions de l’enfant crée un espace où il se sent entendu et respecté. Cela encourage également l’enfant à exprimer ses émotions et ses pensées en toute confiance.
-
-2. Positivité dans les Échanges
-Favoriser un langage positif et encourageant crée un environnement où l’enfant se sent soutenu. Plutôt que de se concentrer sur les erreurs ou les comportements négatifs, valorisez les aspects positifs et guidez l’enfant vers des solutions constructives.
-
-3. Les Limites et les Conséquences : Clarifier les Attentes
-Communiquer des limites claires et des conséquences raisonnables est essentiel. Cela aide l’enfant à comprendre les attentes et les conséquences de ses actions, favorisant ainsi un environnement sûr et structuré.
-
-4. Émotions et Validation
-Reconnaître et valider les émotions de l’enfant, même si elles semblent déroutantes ou difficiles, est crucial. L’expression émotionnelle est un aspect essentiel du développement. Apprendre à gérer ces émotions est une compétence clé pour la vie.
-
-5. Encourager la Résolution de Problèmes et l’Autonomie
-Favoriser l’autonomie et encourager l’enfant à participer à la résolution de problèmes renforce son estime de soi et sa confiance en ses capacités.
-
-Conclusion
-La communication bienveillante crée un espace d’échange ouvert, honnête et respectueux. Elle favorise la confiance mutuelle et renforce les liens entre parents et enfants, favorisant un environnement propice à l’épanouissement et à la croissance émotionnelle et relationnelle.</p>
-        </article>           
-    </main>
+       
 
     <footer>
         <p>&copy; 2023 Blog Parentalité & Éducation</p>
