--- a/articles.html
+++ b/articles.html
@@ -11,7 +11,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="articles.html">Articles</a></li>
+                 <li><a href="articles.html">L’évolution cognitive de l’enfant</a></li>
+                <li><a href="article2.html">Art de la Communication Bienveillante : Créer des Liens Solides avec Vos Enfants</a></li>
             </ul>
         </nav>
     </header>
