--- a/article2.html
+++ b/article2.html
@@ -1,4 +1,24 @@
- <article>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <title>Article 1 - L’évolution cognitive de l’enfant</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+</head>
+<body>
+    <header>
+        <h1>Blog Parentalité & Éducation</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Accueil</a></li>
+                 <li><a href="articles.html">L’évolution cognitive de l’enfant</a></li>
+                <li><a href="article2.html">Art de la Communication Bienveillante : Créer des Liens Solides avec Vos Enfants</a></li>
+            </ul>
+        </nav>
+    </header>
+    
+    <main>
+<article>
 <h2>Art de la Communication Bienveillante : Créer des Liens Solides avec Vos Enfants</h2>
 <p>La communication est la clé d’une relation forte et harmonieuse entre parents et enfants. Cultiver une approche bienveillante de la communication peut non seulement renforcer les liens, mais aussi aider les enfants à développer des compétences sociales et émotionnelles saines.
 
@@ -21,3 +41,7 @@ Conclusion
 La communication bienveillante crée un espace d’échange ouvert, honnête et respectueux. Elle favorise la confiance mutuelle et renforce les liens entre parents et enfants, favorisant un environnement propice à l’épanouissement et à la croissance émotionnelle et relationnelle.</p>
         </article>           
     </main>
+  <footer>
+        <p>&copy; 2023 Blog Parentalité & Éducation</p>
+    </footer>
+</body>
