--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <h1> Parentalité & Éducation</h1>
+        <h1> ÉducaZen : Parentalité & Éducation</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
