--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ Ce que Vous Trouverez Ici :
 
 Sur ÉducaZen, nous abordons un éventail de sujets allant de la communication bienveillante avec les enfants à des approches éducatives respectueuses. Vous découvrirez des articles, des astuces et des ressources pour accompagner les familles dans le développement positif de leurs enfants.
 
-Rejoignez la href="https://dictionary.cambridge.org/us/dictionary/english/community">communauté</a> :
+Rejoignez la <a href="https://dictionary.cambridge.org/us/dictionary/english/community">communauté</a> :
 
 Nous invitons tous ceux qui partagent cette passion pour une éducation respectueuse et une parentalité bienveillante à se joindre à nous. Partagez vos histoires, vos questions et contribuez à construire une communauté bienveillante et soutenante.
 
