--- a/articles.html
+++ b/articles.html
@@ -10,31 +10,31 @@
         <h1>ÉducaZen : Parentalité & Éducation</h1>
         <nav>
             <ul>
-                <li><a href="index.html">Accueil</a></li>
-                 <li><a href="articles.html">L’évolution cognitive de l’enfant</a></li>
-                <li><a href="article2.html">Art de la Communication Bienveillante : Créer des Liens Solides avec Vos Enfants</a></li>
+                <li><a href="index.html"><strong>Accueil</strong></a></li>
+                <li><a href="articles.html"><strong>L’évolution cognitive de l’enfant</strong></a></li>
+                <li><a href="article2.html"><strong>Art de la Communication Bienveillante : Créer des Liens Solides avec Vos Enfants</strong></a></li>
             </ul>
         </nav>
     </header>
     
     <main>
         <article>
-            <h2>L’évolution cognitive de l’enfant</h2>
+            <h2><strong>L’évolution cognitive de l’enfant</strong></h2>
             <p>L’évolution cognitive des enfants est une fascinante série de découvertes, marquée par des étapes distinctes. Chaque phase représente une avancée remarquable dans le développement mental et émotionnel de l’enfant. Comprendre ces étapes clés peut aider les parents à mieux accompagner leurs enfants à mesure qu’ils grandissent.
 
-<h3>1. Les Fondations de l’Enfance : La Période Sensori-Motrice</h3>
+<h3><strong>1. Les Fondations de l’Enfance : La Période Sensori-Motrice</strong></h3>
 
 Les premières années de la vie sont caractérisées par l’exploration sensorielle et motrice. Les nourrissons découvrent le monde à travers leurs sens et leurs mouvements. Ils apprennent à coordonner leurs gestes et à comprendre la relation entre leurs actions et les réactions de leur environnement. Les jeux simples et les interactions avec les parents et les autres enfants sont essentiels à cette étape.
 
-<h3>2. Le Développement de la Pensée Symbolique : La Période Préopératoire</h3>
+<h3><strong>2. Le Développement de la Pensée Symbolique : La Période Préopératoire</strong></h3>
 
 Autour de l’âge de deux ans, les enfants entrent dans la phase préopératoire. Ils commencent à utiliser des symboles, comme le langage, pour représenter des objets et des idées. L’imagination se développe, permettant aux enfants de jouer à des jeux de rôle, de créer des scénarios imaginaires et de développer des compétences langagières.
 
-<h3>3. La Période Opératoire Concrète : Logique et Raisonnement</h3>
+<h3><strong>3. La Période Opératoire Concrète : Logique et Raisonnement</strong></h3>
 
 À partir de l’âge de sept ans environ, les enfants entrent dans la période opératoire concrète. Ils commencent à raisonner logiquement sur des concepts concrets. Leur capacité à comprendre les mathématiques, la causalité et d’autres concepts abstraits se renforce. Les jeux de construction, les énigmes et les activités de résolution de problèmes sont bénéfiques à ce stade.
 
-<h3>4. L’Éveil de la Pensée Formelle : Abstraction et Pensée Critique</h3>
+<h3><strong>4. L’Éveil de la Pensée Formelle : Abstraction et Pensée Critique</strong></h3>
 
 L’adolescence voit l’émergence de la pensée formelle. Les enfants développent une capacité à raisonner abstraitement, à envisager des concepts hypothétiques et à exercer la pensée critique. Les discussions ouvertes, les débats et les activités qui stimulent la réflexion sont particulièrement utiles pour favoriser cette évolution.
 
@@ -42,9 +42,11 @@ Conclusion
 
 Le développement cognitif des enfants est une aventure progressive. Chaque étape est fondamentale pour la suivante, et les expériences durant ces phases influencent grandement la façon dont les enfants interagissent avec le monde qui les entoure. En comprenant ces étapes clés, les parents peuvent créer un environnement propice à l’épanouissement mental et émotionnel de leurs enfants, les aidant ainsi à développer tout leur potentiel.</p>
         </article>
-       
+    </main>
 
     <footer>
+        <!-- Your footer content here -->
+    </footer>
         <p>&copy; 2023 Blog Parentalité & Éducation</p>
     </footer>
 </body>
