--- a/articles.html
+++ b/articles.html
@@ -36,11 +36,10 @@ Autour de l’âge de deux ans, les enfants entrent dans la phase préopératoir
 
 <h3><strong>4. L’Éveil de la Pensée Formelle : Abstraction et Pensée Critique</strong></h3>
 
-L’adolescence voit l’émergence de la pensée formelle. Les enfants développent une capacité à raisonner abstraitement, à envisager des concepts hypothétiques et à exercer la pensée critique. Les discussions ouvertes, les débats et les activités qui stimulent la réflexion sont particulièrement utiles pour favoriser cette évolution.
+<p>L’adolescence voit l’émergence de la <strong>pensée formelle</strong>. Les enfants développent une capacité à <strong>raisonner abstraitement</strong>, à envisager des <strong>concepts hypothétiques</strong> et à exercer la <strong>pensée critique</strong>. Les <strong>discussions ouvertes</strong>, les <strong>débats</strong> et les <strong>activités qui stimulent la réflexion</strong> sont particulièrement utiles pour favoriser cette évolution.
+    <h4>Conclusion</h4> 
+    Le <strong>développement cognitif</strong> des enfants est une aventure progressive. Chaque <strong>étape</strong> est fondamentale pour la suivante, et les <strong>expériences</strong> durant ces <strong>phases</strong> influencent grandement la façon dont les <strong>enfants interagissent avec le monde</strong> qui les entoure. En comprenant ces <strong>étapes clés</strong>, les <strong>parents</strong> peuvent créer un <strong>environnement propice</strong> à l’épanouissement <strong>mental et émotionnel</strong> de leurs <strong>enfants</strong>, les aidant ainsi à développer tout leur <strong>potentiel</strong>.</p>
 
-Conclusion
-
-Le développement cognitif des enfants est une aventure progressive. Chaque étape est fondamentale pour la suivante, et les expériences durant ces phases influencent grandement la façon dont les enfants interagissent avec le monde qui les entoure. En comprenant ces étapes clés, les parents peuvent créer un environnement propice à l’épanouissement mental et émotionnel de leurs enfants, les aidant ainsi à développer tout leur potentiel.</p>
         </article>
     </main>
 
@@ -51,3 +50,4 @@ Le développement cognitif des enfants est une aventure progressive. Chaque éta
     </footer>
 </body>
 </html>
+
