--- a/article2.html
+++ b/article2.html
@@ -20,25 +20,25 @@
     <main>
 <article>
 <h2>Art de la Communication Bienveillante : Créer des Liens Solides avec Vos Enfants</h2>
-<p>La communication est la clé d’une relation forte et harmonieuse entre parents et enfants. Cultiver une approche bienveillante de la communication peut non seulement renforcer les liens, mais aussi aider les enfants à développer des compétences sociales et émotionnelles saines.
+<p>La communication est la clé d’une relation <strong>forte</strong> et <strong>harmonieuse</strong> entre parents et enfants. Cultiver une approche bienveillante de la communication peut non seulement renforcer les liens, mais aussi aider les enfants à développer des <strong>compétences sociales et émotionnelles</strong>  saines.
 
 <h3>1. Écoute Active : La Clé d’une Communication Authentique</h3>
-L’écoute active est le fondement d’une communication efficace. Prendre le temps d’écouter attentivement les préoccupations, les joies et les questions de l’enfant crée un espace où il se sent entendu et respecté. Cela encourage également l’enfant à exprimer ses émotions et ses pensées en toute confiance.
+L’écoute active est le fondement d’une communication efficace. Prendre le temps d’écouter attentivement les préoccupations, les joies et les questions de l’enfant crée un espace où il se sent <strong>entendu et respecté</strong>. Cela encourage également l’enfant à exprimer ses émotions et ses pensées en toute <strong>confiance</strong>.
 
 <h3>2. Positivité dans les Échanges</h3>
 Favoriser un langage positif et encourageant crée un environnement où l’enfant se sent soutenu. Plutôt que de se concentrer sur les erreurs ou les comportements négatifs, valorisez les aspects positifs et guidez l’enfant vers des solutions constructives.
 
 <h3>3. Les Limites et les Conséquences : Clarifier les Attentes</h3>
-Communiquer des limites claires et des conséquences raisonnables est essentiel. Cela aide l’enfant à comprendre les attentes et les conséquences de ses actions, favorisant ainsi un environnement sûr et structuré.
+Communiquer des limites <strong>claires</strong> et des conséquences raisonnables est essentiel. Cela aide l’enfant à comprendre les attentes et les conséquences de ses actions, favorisant ainsi un environnement sûr et structuré.
 
 <h3>4. Émotions et Validation</h3>
 Reconnaître et valider les émotions de l’enfant, même si elles semblent déroutantes ou difficiles, est crucial. L’expression émotionnelle est un aspect essentiel du développement. Apprendre à gérer ces émotions est une compétence clé pour la vie.
 
 <h3>5. Encourager la Résolution de Problèmes et l’Autonomie</h3>
-Favoriser l’autonomie et encourager l’enfant à participer à la résolution de problèmes renforce son estime de soi et sa confiance en ses capacités.
+Favoriser l’autonomie et encourager l’enfant à participer à la résolution de problèmes renforce son <strong>estime de soi</strong> et sa confiance en ses capacités.
 
-Conclusion
-La communication bienveillante crée un espace d’échange ouvert, honnête et respectueux. Elle favorise la confiance mutuelle et renforce les liens entre parents et enfants, favorisant un environnement propice à l’épanouissement et à la croissance émotionnelle et relationnelle.</p>
+<h4>Conclusion</h4>
+La communication bienveillante crée un espace d’échange <strong>ouvert</strong>, <strong>honnête</strong> et <strong>respectueux</strong>. Elle favorise la confiance mutuelle et renforce les liens entre parents et enfants, favorisant un environnement propice à l’épanouissement et à la croissance émotionnelle et relationnelle.</p>
         </article>           
     </main>
   <footer>
