--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title><strong>Parentalité & Éducation - Accueil</strong></title>
+    <title>Parentalité & Éducation - Accueil</title>
     <meta name="description" content="<strong>éducation bienveillante, l'épanouissement familial, conseils, parents, le développement positif, enfants, des articles, des astuces, des ressources, accompagner les familles, une parentalité bienveillante.</strong>">
 
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
