--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title> Parentalité & Éducation - Accueil </title>
-    <meta name="description" content="éducation bienveillante, l'épanouissement familial, conseils, parents, le développement positif, enfants, des articles, des astuces, des ressources, accompagner les familles, une parentalité bienveillante.">
+    <meta name="description" content="éducation bienveillante, l'épanouissement familial, conseils, parents, 
+        le développement positif, enfants, des articles, des astuces, des ressources, accompagner les familles, 
+        une parentalité bienveillante.">
 
     <link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
