--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ Explorez nos <strong>articles</strong>, découvrez de nouvelles <strong>approche
             <p><strong>contact@parental.com</strong></p>
         </section>
     </main>
+    <div class="outside-body">
+    <img src="media.jpg" alt="Image de fond" />
+  </div>
  
     <footer>
         <p>&copy; 2023 Blog Parentalité & Éducation</p>
