--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ Explorez nos <strong>articles</strong>, découvrez de nouvelles <strong>approche
         </section>
     </main>
     <div class="outside-body">
-    <img src="media.jpg" alt="Image de fond" />
+    <img src="media-removebg-preview.png" alt="Image de fond" />
   </div>
  
     <footer>
