--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ Explorez nos <strong>articles</strong>, découvrez de nouvelles <strong>approche
             <h2><strong>Contact</strong></h2>
             <p><strong>contact@parental.com</strong></p>
         </section>
+         <section>
+             <img src="media-removebg-preview.png" alt="Image de fond" />
+         </section>
+        
     </main>
-    <div class="outside-body">
-    <img src="media-removebg-preview.png" alt="Image de fond" />
-  </div>
+   
  
     <footer>
         <p>&copy; 2023 Blog Parentalité & Éducation</p>
