--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ Explorez nos <strong>articles</strong>, découvrez de nouvelles <strong>approche
             <h2><strong>Contact</strong></h2>
             <p><strong>contact@parental.com</strong></p>
         </section>
-         <section>
+         <section id="media">
              <img src="media-removebg-preview.png" alt="Image de fond" />
          </section>
         
