--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Explorez nos <strong>articles</strong>, découvrez de nouvelles <strong>approche
             <p><strong>contact@parental.com</strong></p>
         </section>
          <section id="media">
-             <img src="media-removebg-preview.png" alt="Image de fond" />
+             <img src="media-removebg-preview.png" alt="Image de fond" width="20" height="10" />
          </section>
         
     </main>
